Fixed some errors in the stylesheet. Rounded corners to input boxes. Fixed some alignment issues with labels and the checkbox/radiobuttons. Added some spacing inbetween the new fieldsets.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 .dark-matter {
     margin-left: auto;
     margin-right: auto;
-    max-width: 700px;
+    max-width: 650px;
     background: #555;
     padding: 20px 30px 20px 30px;
     font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -34,22 +34,24 @@ body {
     display: block;
     margin: 0px 0px 5px;
 }
-.dark-matter label>span, #special {
+
+.dark-matter label>span, .special{
     float: left;
     width: 25%;
     text-align: right;
     padding-right: 15px;
     margin-top: 10px;
     font-weight: bold;
+    
 }
 
 .dark-matter input[type="radio"], .dark-matter input[type="checkbox"]{
   display: inline-block;
-  margin-top: 10px;
+  margin: 4px;
 }
 
 .dark-matter input[type="text"], .dark-matter input[type="email"], 
-.dark-matter textarea, .dark-matter select, .dark-matter input[type="tel"],
+.dark-matter textarea, .dark-matter select,
 .dark-matter input[type="number"], .dark-matter input[type="date"] {
     border: none;
     color: #525252;
@@ -61,11 +63,12 @@ body {
     outline: 0 none;
     padding: 5px 0px 5px 5px;
     width: 70%;
-    border-radius: 2px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     background: #DFDFDF;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+}
 }
 .dark-matter select {
     background: #DFDFDF url('down-arrow.png') no-repeat right;
@@ -84,6 +87,9 @@ body {
     height:100px;
     padding: 5px 0px 0px 5px;
     width: 70%;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
 }
 .dark-matter .button {
     background: #FFCC02;
@@ -109,8 +115,10 @@ body {
   font: 18px "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #FFCC02;
   font-weight: bold;
+}
 
-
+.dark-matter fieldset{
+  margin-bottom: 15px;
 }
 
 /* #### Parsley Stuff #### */
